[package]
name = "deadqueue"
version = "0.3.0"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
description = "Dead simple async queue"
keywords = ["async", "queue"]
license = "MIT/Apache-2.0"
repository = "https://github.com/bikeshedder/deadqueue"
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[dependencies]
tokio = { version = "1", features = ["sync", "macros"] }
crossbeam-queue = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "time"] }

[features]
default = ["unlimited", "resizable", "limited"]
unlimited = []
resizable = ["unlimited"]
limited = []
